# es-client

./: package-lock.json  package.json
src/: App.vue  main.js
src-tauri/: Cargo.toml  log4rs.yaml  tauri.conf.json
src-tauri/src/: action.rs  lib.rs  main.rs  model.rs
src-tauri/src/action/: init.rs  operate_es.rs  search_es.rs  util.rs
src-tauri/src/model/: connect_config_model.rs  error.rs  es_column.rs  query_data_req.rs  response.rs  store_connect_config_model.rs
src/components/: DataTable.vue  FilterPanel.vue  Sidebar.vue  TopBar.vue
